objects/Rating_Estimates__c.object
<CustomObject>
    <fields>
        <fullName>A25_54_000__c</fullName>
        <label>A25-54 (000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A25_54__c</fullName>
        <label>A25-54</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HH_000__c</fullName>
        <label>HH (000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HH__c</fullName>
        <label>HH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Programs__c</referenceTo>
        <relationshipLabel>Rating Estimates</relationshipLabel>
        <relationshipName>Rating_Estimates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Season__c</fullName>
        <label>Season</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2013 - 2014</fullName>
                </value>
                <value>
                    <fullName>2014 - 2015</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Rating Estimate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RE-{000000}</displayFormat>
        <label>Rating Estimates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rating Estimates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>